grammar.js
    program: $ => choice(
      $.shebang,
      prec(2,seq(
        optional(choice(
          seq($.shebang, token.immediate(/\r?\n/)),
          alias($.comment_block_BOF, $.comment_block)
        )),
        repeat($._line),
        optional(choice(
          $.progn,
          $.system_command,
          alias(token(/[kp]\)[^\r\n]*/), $.dsl),
          alias($._line_comment, $.comment),
          alias($.comment_terminal,$.comment))) // due to EOF
      ))),

    _line: $ => choice(
      seq($.system_command, /\r?\n/),
      seq($.progn, /\r?\n/),
      seq(alias(token(/[kp]\)[^\r\n]*/), $.dsl), token.immediate(/\r?\n/)),
      seq(alias($._line_comment, $.comment),  token.immediate(/\r?\n/)),
      /\r?\n/
    ),

    // a line in q is an implicit progn, returning the last expression
    progn: $ => prec.right(seq(
      repeat(seq(optional($._expression),$._seperator)),
      choice(field("output", $._expression), seq(optional($._expression),$._seperator))
    )),

    // semicolon catches whitespaces
    _seperator: $ => prec.right(alias(';', $.semicolon)),

    _expression: $ => prec(
      -1,
      choice(
        alias($._prefix_expression, $.func_app),
        $.bracket_progn,
        // regular
        $._subexpression
      ),
    ),

    number: $ => token(choice(
      // all digits without point are long
      alias(token(choice(
        /-?\d+j?/, /0[NWnw]j?/
      )), $.long),
      alias(token(
        /[01]b/
      ), $.boolean),
      alias(token(
        /0x[0-9a-fA-F]/
      ), $.byte),
      alias(token(
        /0[Nn]g/
      ), $.guid),
      alias(token(choice(
        /-?\d+h/, /0[NWnw]h/, /-0[Ww]h/
      )), $.short),
      alias(token(choice(
        /-?\d+i/, /0[NWnw]i/, /-0[Ww]i/
      )), $.int),
      alias(token(choice(
        /-?\d+\.?\d*(e[-+]?\d+)?f?/,
        /-?\.\d+(e[-+]?\d+)?f?/,
        /0[nw]f?/,
        /0[NW]f/,
        /-0[Ww]f?/
      )), $.float),
      alias(token(choice(
        /-?\d+\.?\d*(e-?\d+)?e/,
        /-?\.\d+(e-?\d+)?e/,
        /0[NWnw]e/,
        /-0[Ww]e/
      )), $.real),
    )),

    temporal: $ => token(choice(
      // year.monthm, month type
      alias(token(
        choice(/\d{4}\.(0\d|1[012])m/, /0[Nn]m/)
      ), $.month),
      // year.month.date, date type
      alias(token(
        choice(/\d{4}\.(0\d|1[012])\.([0-2]\d|3[01])/, /-?0[nNwW]d/)
      ), $.date),
      alias(token(choice(
        // year.month.dateD, timestamp type
        /[12]\d{3}\.(0\d|1[012])\.([0-2]\d|3[01])D/,
        // year.month.dateDhour, timestamp type
        /[12]\d{3}\.(0\d|1[012])\.([0-2]\d|3[01])D([01]\d|2[0124]):?/,
        // year.month.dateDhour:minute,
        /[12]\d{3}\.(0\d|1[012])\.([0-2]\d|3[01])D([01]\d|2[0124]):[0-5]\d:?/,
        // year.month.dateDhour:minute:second.miliseconds,
        /[12]\d{3}\.(0\d|1[012])\.([0-2]\d|3[01])D([01]\d|2[0124]):[0-5]\d:[0-5]\d(\.\d*)?/,
        // special
        /-?0[NnWw]p/,
      )), $.timestamp),
      alias(token(choice(
        //hours: minute type
        /-?\d{2}\d*:/,
        //hours:minutes:
        /-?\d{2}\d*:[0-5]\d:?/,
        /0[nNwW]u/
      )), $.minute),
      //hours:minutes:seconds second type
      alias(token(choice(
        /-?\d{2}\d*:[0-5]\d:[0-5]\d\.?/, /0[NnWw]v/
      )), $.second),
      //hours:minutes:seconds.miliseconds time type
      alias(token(choice(
        /-?\d{2}\d*:[0-5]\d:[0-5]\d\.\d+/,
        /0[NnWw]t/
      )), $.time),
      alias(token(choice(
        // daysD
        /-?\d+D/,
        // daysDhours:
        /-?\d+D\d{2}:?/,
        // daysDhours:minutes:
        /-?\d+D\d{2}:[0-5]\d:?/,
        // daysDhours:minutes:seconds.miliseconds
        /-?\d+D\d{2}:[0-5]\d:[0-5]\d(\.\d*)?/,
        /0[NnWw]n/
      )), $.timespan),
      alias(token(choice(/0[Nn]z/, /-?0[wW]z/)), $.datetime)
    )),

    _line_comment: $ => token(prec(100, /\/[^\r\n]*[^ \t\r\n][^\r\n]*/)),

    // multiline coments have to start with / then end with \
    // comment blocks have the flush with left side
